# Argumentative

./: .gitignore  .travis.yml  Argumentative.cpp  CMakeLists.txt  LICENSE  README.MD  example.cpp  make_header.sh  readme.md  vt_argumentative.hpp
.github/workflows/: ci.yml
include/: Argumentative.hpp
include/argumentative/argument/: Argument.hpp  Flag.hpp  Version.hpp
include/argumentative/argument/errors/: InvalidOption.hpp
include/argumentative/utils/: swap_sign.hpp
includes/: Argumentative.hpp
src/: Argumentative.hpp
src/argument/: *.hpp  Argument.hpp  Flag.hpp  Help.hpp  Option.hpp  Version.hpp
src/argument/errors/: InvalidOption.hpp
src/utils/: swap_sign.hpp  typealias.hpp
tests/: CMakeLists.txt  TestArgument.hpp  TestCase.hpp  TestInvalidOption.hpp  TestMain.cpp  assert.hpp
